tests/negative/typecheck/union_dup.orng
// union_dup.orng:6:25: error: duplicate item `b`
//     let x: (a | b) || (b | c) = .b
//                        ^
// 
fn main() -> Int {
    let x: (a | b) || (b | c) = .b
    0
}